tests/ui/noexporttypeexe.stderr
error[E0308]: mismatched types
  --> $DIR/noexporttypeexe.rs:10:18
   |
LL |   let x: isize = noexporttypelib::foo();
   |          -----   ^^^^^^^^^^^^^^^^^^^^^^ expected `isize`, found `Option<isize>`
   |          |
   |          expected due to this
   |
   = note: expected type `isize`
              found enum `Option<isize>`
note: the function noexporttypelib is defined here
  --> $DIR/auxiliary/noexporttypelib.rs:2:1
   |
LL | pub fn foo() -> oint { Some(3) }
   | ^^^^^^^^^^^^^^^^^^^^
help: consider using `Option::expect` to unwrap the `Option<isize>` value, panicking if the value is an `Option::None`
   |
LL |   let x: isize = noexporttypelib::foo().expect("REASON");
   |                                        +++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
